public/css/styles.css
@import url('https://fonts.googleapis.com/css?family=Gabriela');

.content {
    margin-top: 50px;
}

h1, h2 {
    font-family: 'Gabriela', serif;
}


/*
    Datepicker
 */
.datepicker .day {
    color : #087e0a;
    font-weight: normal;
}
.datepicker .day.disabled {
    color : #bd1720;
    font-weight: bold;
}
.bootstrap-datetimepicker-widget table td.active, .bootstrap-datetimepicker-widget table td.active:hover {
    background-color: #d1eaff;
    color: #087e0a;
}


/*
    Navbar
 */
.admin-item {
    background-color : #eed2b5;
}
.admin-item.dropdown-item:hover {
    background-image: none !important;
    background-color : #eac8a7 !important;
}

.navbar-brand {
    font-family: 'Gabriela', serif;
}
.navbar-brand:hover {
    color : #fff !important;
}

/* Hamburger menu */
.navbar-default .navbar-toggle {
    border-color : #eee;
}
.navbar-default .navbar-toggle .icon-bar {
    background-color: #eee;
}
.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
    background-color: #eeeeee44;
}

/*
    Footer
 */
footer {
    background-color: #f9f9f9;
}
footer .container .credit {
    margin: 20px 0;
    text-align: center;
}

footer .container .credit p:first-child {
    font-size: 1.1em;
}

/*
    Reservation
 */
#spinner img {
    height : 50px;
    position : relative;
    top : -8px;
    display : none;
}

/*
    Admin
 */
.reservation_tr:hover {
    cursor : pointer !important;
}
.reservation_annulee {
    background-color: #eea9a7 !important;
}
.reservation_fake td:nth-child(5) {
    background-color : #ffc18c;
}

/*
    Homepage
 */
@media (min-width: 550px){
    .fb_embed_small {
        display : none;
    }
}
@media (max-width: 550px){
    .fb_embed_large {
        display : none;
    }
}
.sidebar {
    background-color: #bfa56f;
    color : white;
    padding : 30px 20px 30px 20px;
    border: 1px solid #977b43;
    border-top : none;
}
.sidebar .reservation-btn {
    margin-bottom: 30px;
}
.sidebar #place {
    margin-bottom: 10px;
}
.datepicker {
    color: #333;
    background-color: #fff;
}
.btn-reserver {
    background-image: none;
    background-color: #5d9d31;
    border-color: #4f8227;
}
.btn-reserver:hover, .btn-reserver:focus {
    background-color: #558d2c;
    border-color: #4f8227;
}
.btn-reserver:active:focus {
    background-color: #4f8227;
    border-color: #487724;
}

@media(max-width:767px){
    .sidebar {

    }
}
@media(min-width:768px){
    .sidebar {

    }
}
@media(min-width:992px){
    .sidebar {
        position : fixed;
        width : 293px;
    }
}
@media(min-width:1200px){
    .sidebar {
        position: fixed;
        width : 360px;
    }
}



/*
    Flatten bootstrap elements
 */
.navbar-brand, .navbar-nav>li>a {
    text-shadow: none;
}

.navbar-default {
    background-image: none;
    /*box-shadow: 0 2px 10px #68583e;*/
}

/*
    Forms
 */
.page-form {
    margin-top: 20px;
    margin-bottom: 50px;
}


/*
    Visitors' book
 */
.book-section {
    margin-bottom: 30px;
}
.book-section h3 {
    font-family : 'Gabriela', serif;
}

/*
    Activities
 */
.activite-section h3 {
    font-family : 'Gabriela', serif;
}
.top-margin {
    margin-top: 20px;
}

